@@ -1,7 +1,12 @@
 package com.kotori316.scala_lib;
 
+import net.neoforged.api.distmarker.Dist;
+import org.objectweb.asm.Type;
+
 import java.util.Collection;
 import java.util.List;
+import java.util.Set;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 public interface ModClassData {
@@ -9,24 +14,36 @@ public interface ModClassData {
 
     String modID();
 
+    Set<Dist> availableDistSet();
+
     default boolean isScalaObj() {
         return className().endsWith("$");
     }
 
     static <T extends ModClassData> List<T> findInstance(Collection<T> targets) {
+        return findInstance(targets, t -> {
+            throw new RuntimeException("Exception in loading mods. %s".formatted(targets));
+        });
+    }
+
+    static <T extends ModClassData> List<T> findInstance(Collection<T> targets, Consumer<Collection<T>> onError) {
         var byModId = targets.stream().collect(Collectors.groupingBy(ModClassData::modID));
-        return byModId.values().stream().map(ts -> {
+        return byModId.values().stream().<T>mapMulti((ts, c) -> {
             if (ts.size() == 1) {
-                return ts.get(0);
+                 c.accept(ts.getFirst());
             } else {
                 var objectData = ts.stream().filter(ModClassData::isScalaObj).toList();
                 if (objectData.size() == 1) {
                     // Ignore anything but a Scala Object.
-                    return objectData.get(0);
+                    c.accept(objectData.getFirst());
                 } else {
-                    throw new RuntimeException("Exception in loading mods. %s".formatted(targets));
+                    onError.accept(objectData);
                 }
             }
         }).toList();
+    }
+
+    static ModClassData of(Type t, String modId, Set<Dist> availableDistSet) {
+        return new ModClassDataImpl(t.getClassName(), modId, availableDistSet);
     }
 }
